# noice-web

./: .env.template  .gitignore  Cargo.toml  README.md
apps/user/: Cargo.toml
apps/user/src/: endpoints.rs  lib.rs  models.rs  routes.rs  utils.rs
apps/user/src/endpoints/: login.rs  mod.rs  register.rs  update_password.rs
apps/user/src/endpoints/tenant/: mod.rs  tenant_.rs  tenant_user.rs
apps/user/src/endpoints/user/: info.rs  login.rs  mod.rs  register.rs  update_password.rs
apps/user/src/models/: mod.rs  user.rs
migrations/: 20230527075745_noice-web-user.sql  20230706121740_noice-web-tenant.sql
noice-core/: Cargo.toml
noice-core/src/: authorisation.rs  cookies.rs  db.rs  lib.rs  session.rs
noice-core/src/models/: mod.rs  tenant.rs  user.rs
noice-web/: Cargo.toml
noice-web/src/: main.rs
static/: index.html  login.html
