[workspace]
members = [
    "noice-*",
    "apps/*",
]

[workspace.package]
edition = "2021"
authors = ["Hubert Shelley <hubertshelley@163.com>"]
homepage = "https://github.com/hubertshelley/noice-web"
license = "Apache-2.0"
readme = "./readme.md"
repository = "https://github.com/hubertshelley/noice-web"
version = "0.1.0"

[workspace.dependencies]
silent = "0.8"
sqlx = "0.6"
tokio = "1.28.2"
async-trait = "0.1.68"
dotenv = "0.15.0"
serde = "1.0.164"
anyhow = "1"
noice-web-user = { version = "0.1.0", path = "./apps/user" }
noice-core = { version = "0.1.0", path = "./noice-core" }
