[workspace]
members = [
    "noice-*",
    "apps/*",
]

[workspace.package]
edition = "2021"
authors = ["Hubert Shelley <hubertshelley@163.com>"]
homepage = "https://github.com/hubertshelley/noice-web"
license = "Apache-2.0"
readme = "./readme.md"
repository = "https://github.com/hubertshelley/noice-web"
version = "0.1.0"

[workspace.dependencies]
silent = "0.9"
sqlx = "0.7"
tokio = "1.29.1"
async-trait = "0.1.71"
dotenv = "0.15.0"
serde = "1.0.171"
anyhow = "1"
noice-web-user = { version = "0.1.0", path = "./apps/user" }
noice-core = { version = "0.1.0", path = "./noice-core" }
cookie = "0.17.0"
serde_json = "1.0.100"
async-session = "3.0.0"
