[package]
name = "noice-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silent = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mysql"] }
async-trait = { workspace = true }