[package]
name = "noice-web-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silent = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true }
anyhow = { workspace = true }

noice-core = { workspace = true }